@@ -1,5 +1,10 @@
 2002-03-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 03126] reshapeBuffer() and -m option
+	* buffer.c (reshapeBuffer): fix reshapeBuffer() in case of -m option
+
+2002-03-14  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 03125] w3m -m < image
 	* file.c (openGeneralPagerBuffer): use internal viewer for -m option
 
@@ -3132,4 +3137,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.345 2002/03/13 15:48:20 ukai Exp $
+$Id: ChangeLog,v 1.346 2002/03/13 15:51:36 ukai Exp $
